--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 *.bpl
 *.bpi
 *.dcp
-#*.drc
+*.drc
 *.map
 *.dres
 *.rsm
@@ -31,3 +31,6 @@ __recovery/
 
 # Castalia statistics file (since XE7 Castalia is distributed with Delphi)
 *.stat
+
+# English binary
+.ENU
